Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25549

Assertion `*new_engine' failed in bool check_engine(THD*, const char*, const char*, HA_CREATE_INFO*)

Details

    Description

      INSTALL SONAME 'ha_rocksdb';
      CREATE TEMPORARY TABLE tmp_rocksdb_0 (a CHAR(0)) ENGINE=RocksDB;
      

      Leads to:

      10.6.0 8751aa7397b2e698fa0b46ec3e60abb9e2fd7e1b (Debug)

      mysqld: /test/10.6_dbg/sql/sql_table.cc:11908: bool check_engine(THD*, const char*, const char*, HA_CREATE_INFO*): Assertion `*new_engine' failed.
      

      10.6.0 8751aa7397b2e698fa0b46ec3e60abb9e2fd7e1b (Debug)

      Core was generated by `/test/GAL_MD200421-mariadb-10.6.0-linux-x86_64-dbg/bin/mysqld --defaults-file=/'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14a5800aa700 (LWP 964701))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000557ef30ec70f in my_write_core (sig=sig@entry=6) at /test/10.6_dbg/mysys/stacktrace.c:424
      #2  0x0000557ef2881c86 in handle_fatal_signal (sig=6) at /test/10.6_dbg/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014a583805859 in __GI_abort () at abort.c:79
      #6  0x000014a583805729 in __assert_fail_base (fmt=0x14a58399b588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x557ef3275291 "*new_engine", file=0x557ef3272a70 "/test/10.6_dbg/sql/sql_table.cc", line=11908, function=<optimized out>) at assert.c:92
      #7  0x000014a583816f36 in __GI___assert_fail (assertion=assertion@entry=0x557ef3275291 "*new_engine", file=file@entry=0x557ef3272a70 "/test/10.6_dbg/sql/sql_table.cc", line=line@entry=11908, function=function@entry=0x557ef3274008 "bool check_engine(THD*, const char*, const char*, HA_CREATE_INFO*)") at assert.c:101
      #8  0x0000557ef268f042 in check_engine (thd=thd@entry=0x14a514000db8, db_name=<optimized out>, table_name=0x14a514013cb0 "tmp_rocksdb_0", create_info=create_info@entry=0x14a5800a8b50) at /test/10.6_dbg/sql/sql_table.cc:11908
      #9  0x0000557ef2694775 in create_table_impl (thd=thd@entry=0x14a514000db8, orig_db=@0x14a514013d10: {str = 0x14a5140143c8 "test", length = 4}, orig_table_name=@0x14a514013d20: {str = 0x14a514013cb0 "tmp_rocksdb_0", length = 13}, db=@0x14a514013d10: {str = 0x14a5140143c8 "test", length = 4}, table_name=@0x14a514013d20: {str = 0x14a514013cb0 "tmp_rocksdb_0", length = 13}, path=path@entry=0x14a5800a8710 "/test/GAL_MD200421-mariadb-10.6.0-linux-x86_64-dbg/tmp1/#sql-temptable-eb728-c-6", options={m_options = DDL_options_st::OPT_NONE}, create_info=0x14a5800a8b50, alter_info=0x14a5800a8a60, create_table_mode=0, is_trans=0x14a5800a8987, key_info=0x14a5800a86f8, key_count=0x14a5800a86f4, frm=0x14a5800a8700) at /test/10.6_dbg/sql/sql_table.cc:5290
      #10 0x0000557ef269504d in mysql_create_table_no_lock (thd=thd@entry=0x14a514000db8, db=db@entry=0x14a514013d10, table_name=table_name@entry=0x14a514013d20, create_info=create_info@entry=0x14a5800a8b50, alter_info=alter_info@entry=0x14a5800a8a60, is_trans=is_trans@entry=0x14a5800a8987, create_table_mode=0, table_list=0x14a514013cf8) at /test/10.6_dbg/sql/sql_table.cc:5445
      #11 0x0000557ef26953ba in mysql_create_table (thd=thd@entry=0x14a514000db8, create_table=create_table@entry=0x14a514013cf8, create_info=create_info@entry=0x14a5800a8b50, alter_info=alter_info@entry=0x14a5800a8a60) at /test/10.6_dbg/sql/sql_table.cc:5549
      #12 0x0000557ef2696da7 in Sql_cmd_create_table_like::execute (this=0x14a514013c88, thd=0x14a514000db8) at /test/10.6_dbg/sql/sql_table.cc:12247
      #13 0x0000557ef25c4dbc in mysql_execute_command (thd=thd@entry=0x14a514000db8) at /test/10.6_dbg/sql/sql_parse.cc:5986
      #14 0x0000557ef25ab3b8 in mysql_parse (thd=thd@entry=0x14a514000db8, rawbuf=rawbuf@entry=0x14a514013bb0 "CREATE TEMPORARY TABLE tmp_rocksdb_0 (a CHAR(0)) ENGINE=RocksDB", length=length@entry=63, parser_state=parser_state@entry=0x14a5800a9410) at /test/10.6_dbg/sql/sql_parse.cc:8017
      #15 0x0000557ef25aad51 in wsrep_mysql_parse (thd=thd@entry=0x14a514000db8, rawbuf=0x14a514013bb0 "CREATE TEMPORARY TABLE tmp_rocksdb_0 (a CHAR(0)) ENGINE=RocksDB", length=63, parser_state=parser_state@entry=0x14a5800a9410) at /test/10.6_dbg/sql/sql_parse.cc:7831
      #16 0x0000557ef25ba26b in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14a514000db8, packet=packet@entry=0x14a51400b369 "CREATE TEMPORARY TABLE tmp_rocksdb_0 (a CHAR(0)) ENGINE=RocksDB", packet_length=packet_length@entry=63, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_class.h:1331
      #17 0x0000557ef25bd653 in do_command (thd=0x14a514000db8, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_parse.cc:1406
      #18 0x0000557ef271826d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x557ef5d429f8, put_in_cache=put_in_cache@entry=true) at /test/10.6_dbg/sql/sql_connect.cc:1410
      #19 0x0000557ef2718875 in handle_one_connection (arg=arg@entry=0x557ef5d429f8) at /test/10.6_dbg/sql/sql_connect.cc:1312
      #20 0x0000557ef2bc92f7 in pfs_spawn_thread (arg=0x557ef5dba448) at /test/10.6_dbg/storage/perfschema/pfs.cc:2201
      #21 0x000014a583d13609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #22 0x000014a583902293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.2.38 (dbg), 10.3.29 (dbg), 10.4.19 (dbg), 10.5.10 (dbg), 10.6.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.38 (opt), 10.3.29 (opt), 10.4.19 (opt), 10.5.10 (opt), 10.6.0 (opt)

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.